<resources>
    <string name="app_name">AmbuApp</string>
    <string name="homeButton">Home</string>
    <string name="navicon">Menu</string>
    <string name="leftArrow">Left arrow</string>
    <string name="rightArrow">Right arrow</string>

    <string name="popupMenuItem1">Asetukset</string>
    <string name="popupMenuItem2">Tietoa</string>
    <string name="updateText">Päivitä tiedot</string>
    <string name="updateButtonText">Päivitä sovellus</string>
    <string name="textSizeText">Tekstin koko:</string>
    <string name="sampleText">Esimerkki teksti</string>
    <string-array name="textSizesSpinnerValues">
        <item>Pieni</item>
        <item>Normaali</item>
        <item>Iso</item>
    </string-array>
    <string name="Vastuuvapauslauseke">Sovelluksen tekijät eivät ole vastuussa mistään vahingoista
    joita ilmenee sovelluksen käytöstä tai kyvyttymyydestä käyttää sovellusta ja materiaaleja joita
    se sisältää, eivätkä mistään toimenpiteestä tai päätöksestä jotka on tehty sovelluksen käytön
    seurauksena.\n\nSovelluksen tekijät eivät ole vastuussa sovelluksen materiaalin sisällöstä
    eivätkä sen tarkkuudesta.\n\nJatkamalla hyväksyt käyttämään tietoa omalla vastuulla.</string>

    <string name="asetukset">Asetukset</string>
    <string name="about">Tietoja sovelluksesta</string>
    <string name="kotisivu1">Valmistautuminen</string>
    <string name="kotisivu2">Synnytysvaiheet</string>
    <string name="kotisivu3">Jälkeisvaiheet</string>
    <string name="kotisivu4">Erikoistilanteet</string>
    <string name="kotisivu5">Lääkeohjeet</string>
    <string name="valmistautuminenSivu1">Perustiedot</string>
    <string name="valmistautuminenSivu2">Synnytyksen tilanne</string>
    <string name="valmistautuminenSivu3">Hoidetaan kohteessa</string>
    <string name="valmistautuminenSivu4">Milloin matkaan</string>
    <string name="valmistautuminenSivu5">Miten toimitaan</string>
    <string name="synnytyksenAikanaSivu1">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu2">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu3">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu4">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu5">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu6">Synnytysvaiheet</string>
    <string name="synnytyksenJalkeenSivu1">Lapsen synnyttyä</string>
    <string name="synnytyksenJalkeenSivu2">Jälkeiset</string>
    <string name="synnytyksenJalkeenSivu3">Toimi näin</string>
    <string name="synnytyksenJalkeenSivu4">Tarkkailu</string>
    <string name="erikoistilanteetSivu1">Perätila</string>
    <string name="erikoistilanteetSivu2">Hartiadystokia</string>
    <string name="erikoistilanteetSivu3">Napanuoran esiinluiskahdus</string>
    <string name="peratilaSivu1">Perätila</string>
    <string name="peratilaSivu2">Perätila</string>
    <string name="peratilaSivu3">Perätila</string>
    <string name="peratilaSivu4">Perätila</string>
    <string name="peratilaSivu5">Perätila</string>
    <string name="hartiadystokiaSivu1">Hartiadystokia</string>
    <string name="hartiadystokiaSivu2">Hartiadystokia</string>
    <string name="hartiadystokiaSivu3">Hartiadystokia</string>
    <string name="napanuoraSivu1">Napanuora</string>
    <string name="napanuoraSivu2">Napanuora</string>
    <string name="napanuoraSivu3">Napanuora</string>
    <string name="laakeohjeetSivu">Lääkeohjeet</string>
    <string name="darkModeSwitchText">Aktivoi tummatila</string>

    <string name="valmistautuminenSivu1Title">Perustiedot</string>
    <string name="valmistautuminenSivu2Title">Synnytyksen tilanne</string>
    <string name="valmistautuminenSivu3Title">Hoidetaan kohteessa</string>
    <string name="valmistautuminenSivu4Title">Milloin matkaan</string>
    <string name="valmistautuminenSivu5Title">Miten toimitaan</string>
    <string name="synnytyksenAikanaSivu1Title">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu2Title">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu3Title">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu4Title">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu5Title">Synnytysvaiheet</string>
    <string name="synnytyksenAikanaSivu6Title">Synnytysvaiheet</string>
    <string name="synnytyksenJalkeenSivu1Title">Lapsen synnyttyä</string>
    <string name="synnytyksenJalkeenSivu2Title">Jälkeiset</string>
    <string name="synnytyksenJalkeenSivu3Title">Toimi näin</string>
    <string name="synnytyksenJalkeenSivu4Title">Tarkkailu</string>
    <string name="peratilaSivu1Title">Perätila</string>
    <string name="peratilaSivu2Title">Perätila</string>
    <string name="peratilaSivu3Title">Perätila</string>
    <string name="peratilaSivu4Title">Perätila</string>
    <string name="peratilaSivu5Title">Perätila</string>
    <string name="hartiadystokiaSivu1Title">Hartiadystokia</string>
    <string name="hartiadystokiaSivu2Title">Hartiadystokia</string>
    <string name="hartiadystokiaSivu3Title">Hartiadystokia</string>
    <string name="napanuoraSivu1Title">Napanuora</string>
    <string name="napanuoraSivu2Title">Napanuora</string>
    <string name="napanuoraSivu3Title">Napanuora</string>
    <string name="laakeohjeetSivuTitle">Lääkeohjeet</string>
</resources>