<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSizeTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/textSizeText"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/darkModeSwitch"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Spinner style="@style/mySpinnerStyle"
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/textSizesSpinnerValues"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/darkModeSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textSizeTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/darkModeSwitchText"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSizeTextView"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/updateButtonColor"
        android:text="@string/updateButtonText"
        android:textAllCaps="false"
        android:textColor="@color/updateButtonTextColor"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>