<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="valmistautuminenSivu1"
        android:text="@string/kotisivu1"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button1"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="synnytyksenAikanaSivu1"
        android:text="@string/kotisivu2"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button2"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="synnytyksenJalkeenSivu1"
        android:text="@string/kotisivu3"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button3"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="erikoistilanteetSivu"
        android:text="@string/kotisivu4"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/Button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button4"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        android:visibility="invisible"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button5"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/menuButtonBorderColor"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>